[package]
name = "calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
cursive = { version = "0.20", default-features = false, features = ["termion-backend"] }
exprtk_rs = "0.1.0"

